fixed flag on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,6 @@ header {
   max-width: 90%;
   margin: 0 auto;
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
   align-items: center;
   padding: 0px 10px;
@@ -223,10 +222,14 @@ a {
 
 /* mobile */
 @media (min-width: 320px) and (max-width: 480px) {
-  img {
+  .img-container img{
     max-width: 100%;
     min-width: 300px;
     height: 500px;
     border-radius: 16px;
+  }
+
+  #flag-container img {
+    width: 48px;
   }
 }
